--- a/src/webapp/WEB-INF/pages/admin/edit.html
+++ b/src/webapp/WEB-INF/pages/admin/edit.html
@@ -1,29 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
-    <title>New user</title>
+    <title>EDIT</title>
 </head>
 <body>
-
-<form th:method="POST" th:action="@{/admin}" th:object="${user}">
+<form th:method="PATCH" th:action="@{/{id}(id=${user.getId()})}" th:object="${user}">
     <label for="name">Enter name: </label>
     <input type="text" th:field="*{username}" id="name"/>
     <br/>
     <label for="name">Enter last name: </label>
     <input type="text" th:field="*{lastName}" id="lastName"/>
     <br/>
-    <label for=name>Enter password: </label>
+    <label for=name>Enter age: </label>
     <input type="text" th:field="*{password}" id="age"/>
     <br/>
-    <input type="submit" value="Create"/>
-
-    <hr/>
-    <form class="form-inline my-2 my-lg-0" action="/logout" method="post">
-        <button class ="btn btn-outline-success my-2 my-sm-0">Выйти</button>
-    </form>
-
+    <input type="submit" value="UPDATE"/>
 </form>
-
 </body>
 </html>
