--- a/src/webapp/WEB-INF/pages/admin/index.html
+++ b/src/webapp/WEB-INF/pages/admin/index.html
@@ -18,6 +18,7 @@
         <th>Password</th>
         <th>Role</th>
         <th>IED</th>
+        <th>Info</th>
 
     </tr>
     <tr th:each="user, state : ${people}"
@@ -29,24 +30,26 @@
         <td th:text="${user.getRoles()}"></td>
 
 <!--        <td><a th:href="@{/{id}/edit(id=${user.getId()})}">Edit</a>-->
-        <td><a th:href="@{/{id}/edit(id=${user.getId()})}">Edit</a>
-
-
-        <form th:method="DELETE" th:action="@{/{id}/(id=${user.getId()})}">
+        <td><a th:href="@{/admin/{id}(id=${user.getId()})}">Info Edit Delet</a>
+        <form th:method="DELETE" th:action="@{/admin/{id}/(id=${user.getId()})}">
             <input type="submit" value="DELETE"/>
         </form></td>
+
+<!--        Выбросит на инфо карапета-->
+<!--        <td><form th:method="GET" th:action="@{admin/{id}(id=${user.getId()})}">-->
+<!--            <input type="submit" value="Info"/>-->
+<!--        </form></td>-->
+
     </tr>
 </table>
 
 <br/>
 <hr/>
-<a href="/new">Create new person</a>
+<a href="/admin/new">Create new person</a>
 
     <hr/>
-
-    <form class="form-inline my-2 my-lg-0" action="/logout" method="post">
-        <button class ="btn btn-outline-success my-2 my-sm-0">Выйти</button>
-    </form>
+    <form th:align="center" th:method="POST" th:action="@{/logout}">
+        <input type="submit" value="Exit"/>
 
 </body>
 </html>
