--- a/src/webapp/WEB-INF/pages/admin/index.html
+++ b/src/webapp/WEB-INF/pages/admin/index.html
@@ -50,6 +50,6 @@
     <hr/>
     <form th:align="center" th:method="POST" th:action="@{/logout}">
         <input type="submit" value="Exit"/>
-
+    </form>
 </body>
 </html>
