--- a/src/webapp/WEB-INF/pages/admin/show.html
+++ b/src/webapp/WEB-INF/pages/admin/show.html
@@ -5,29 +5,33 @@
     <title>USER</title>
 </head>
 <body>
-<h1 th:align="center">User data show</h1>
+<h1>User data </h1>
 
-<label>ID: </label>
-<p th:text="${user.getId()}">VALUE</p>
-<p></p>
-<label> Name:  </label>
-<p th:text="${user.getUsername()}">VALUE</p>
-<p></p>
+<label >ID: </label>
+<a th:text="${user.getId()}" id="id">VALUE</a>
+<br/>
+<label for="name"> Name:  </label>
+<a th:text="${user.getUsername()}" id="name">VALUE</a>
+<br/>
 <label>Last Name: </label>
-<p th:text="${user.getLastName()}">VALUE</p>
-
-
-<a th:href="@{/{id}/edit(id=${user.getId()})}">Edit</a>
-
+<a th:text="${user.getLastName()}">VALUE</a>
+<br/>
+<br/>
+<br/>
+<a th:href="@{/admin/{id}/edit(id=${user.getId()})}">Edit</a>
+<br/>
+<br/>
 <form th:method="DELETE" th:action="@{/admin/{id}/(id=${user.getId()})}">
    <input type="submit" value="DELETE"/>
-
 </form>
-
 <hr/>
 <br/>
-<form th:align="center" th:method="POST" th:action="@{/logout}">
-    <input type="submit" value="Logout"/>
+<form th:method="GET" th:action="@{/admin}">
+    <input type="submit" value="Back"/>
+</form>
+<br/>
+<form th:method="POST" th:action="@{/logout}">
+    <input type="submit" value="Exit"/>
 </form>
 
 </body>
