--- a/src/webapp/WEB-INF/pages/admin/edit.html
+++ b/src/webapp/WEB-INF/pages/admin/edit.html
@@ -6,20 +6,35 @@
     <title>EDIT</title>
 </head>
 <body>
-<form th:method="PATCH" th:action="@{/{id}(id=${user.getId()})}" th:object="${user}">
+<h1>Edit User</h1>
+<br/>
+
+<form th:method="PATCH" th:action="@{/admin/{id}(id=${user.getId()})}" th:object="${user}">
     <label for="name">Enter name: </label>
     <input type="text" th:field="*{username}" id="name"/>
     <br/>
     <label for="name">Enter last name: </label>
     <input type="text" th:field="*{lastName}" id="lastName"/>
     <br/>
-    <label for=name>Enter age: </label>
-    <input type="text" th:field="*{password}" id="age"/>
+    <label for=name>Enter password: </label>
+    <input type="text" th:field="*{password}" id="password"/>
     <br/>
+<!--    <label for=name>Enter Role: </label>-->
+<!--    <input type="text" th:field="*{roles}" id="roles"/>-->
+<!--    <br/>-->
     <input type="submit" value="UPDATE"/>
     <hr/>
-    <form th:align="center" th:method="POST" th:action="@{/logout}">
-        <input type="submit" value="Exit"/>
+
 </form>
+
+<form th:method="GET" th:action="@{/admin}">
+    <input type="submit" value="Back"/>
+</form>
+
+<br/>
+<form th:method="POST" th:action="@{/logout}">
+    <input type="submit" value="Exit"/>
+</form>
+
 </body>
 </html>
